--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,6 +14,11 @@ img {
   max-width: 200px;
 }
 
+.gallery {
+  display: flex;
+  direction: row;
+}
+
 /* --------------------------------------------------------------------------------
 Container
 -------------------------------------------------------------------------------- */
